# AMBF-Vulkan

./: .gitignore  CMakeLists.txt  JUANSETUP.txt  Makefile  README.md  imgui.ini  interprocess_test_client.cpp
include/: camera.h  interprocess.h  vk_descriptors.h  vk_engine.h  vk_images.h  vk_loader.h  vk_pipelines.h  vk_types.h
ipc_test_client/: CMakeLists.txt  ipc_test_client.cpp
lib/imgui/: imgui_impl_sdl2.cpp
lib/vma/: vk_mem_alloc.h
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient_color.comp  gradient_color.comp.spv  input_structures.glsl  juan.frag  juan.vert  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  post_process.frag  post_process.frag.spv  post_process.vert  post_process.vert.spv  post_process_test.frag  post_process_test.frag.spv  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  sky.comp  sky.comp.spv  tex_image.frag
src/: camera.cpp  interprocess.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_loader.cpp  vk_pipelines.cpp
